修复点击动画-火花产生的一些BUG
鼠标特效开启需要在 `_config.fluid.yml`中设定才会生效

--- a/themes/fluid/layout/layout.ejs
+++ b/themes/fluid/layout/layout.ejs
@@ -10,11 +10,11 @@ var colorSchema = theme.dark_mode && theme.dark_mode.enable && theme.dark_mode.d
 
 <body>
 
-  {% if theme.fireworks %}
-  <canvas class="fireworks" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;" ></canvas> 
+  <% if(theme.cursor === 'fireworks') { %>
+  <canvas class="fireworks" style="position: fixed;left: 0;top: 0;z-index: 999; pointer-events: none;" ></canvas> 
   <script type="text/javascript" src="//cdn.bootcss.com/animejs/2.2.0/anime.min.js"></script> 
   <script type="text/javascript" src="/js/fireworks.js"></script>
-  {% endif %}
+  <% } %>
 
   <%- inject_point('bodyBegin') %>
 
